little changes. End of project

--- a/cosqq.html
+++ b/cosqq.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo_nav">
             <div class="logo">
-              <img src="public/images/AM-system.png"/>
+              <img src="public/icons/AM-system.png" alt="logo"/>
             </div>
             <div class="nav">
               <nav>
@@ -55,7 +55,7 @@
             <div class="all_products">
                 <div class="products"> 
                   <div class="offer_tile_image">
-                    <img src="public/images/Vector.png" alt="box"> 
+                    <img src="public/icons/Vector.png" alt="box"> 
                   </div>
                   <h2>Lorem ipsum</h2>
                   <p>Lorem ipsum dolor sit amet, architecto asperiores, sequi obcaecati, alias sunt ea. Soluta, rerum, perspiciatis.Lorem ipsum dolor sit amet, architecto asperiores, sequi obcaecati, alias sunt ea. Soluta, rerum, perspiciatis.</p>
@@ -65,7 +65,7 @@
 
                 <div class="products">
                   <div class="offer_tile_image">
-                    <img src="public/images/Vector.png" alt="box"> 
+                    <img src="public/icons/Vector.png" alt="box"> 
                   </div>
                   <h2>Lorem ipsum</h2>
                   <p>Lorem ipsum dolor sit amet, architecto asperiores, sequi obcaecati, alias sunt ea. Soluta, rerum, perspiciatis.</p>
@@ -75,7 +75,7 @@
 
                 <div class="products">
                   <div class="offer_tile_image">
-                  <img src="public/images/Vector.png" alt="box">
+                  <img src="public/icons/Vector.png" alt="box">
                   </div>
                   <h2>Lorem ipsum</h2>
                   <p class="description">Lorem ipsum dolor sit amet, architecto asperiores, sequi obcaecati, alias sunt ea. Soluta, rerum, perspiciatis.</p>
@@ -89,7 +89,7 @@
             <div class="informations_container">
                 <div class="information_block"> 
                   <div class="information_image">
-                    <img src="public/images/undraw_under_construction_46pa 1.png" alt="qqqqqq">
+                    <img src="public/images/undraw_under_construction_46pa 1.png" alt="information_image#1">
                   </div>
                   <div class="information_block_decription">
                     <h2>Lorem ipsum</h2>
@@ -105,7 +105,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, facere, quae eligendi debitis. A debitis totam amet aperiam enim. Qui velit corrupti consequatur nihil est.</p>
                   </div>
                     <div class="information_image">
-                      <img src="public/images/undraw_houses3_xwf7 1.png" alt="qqqqqq">
+                      <img src="public/images/undraw_houses3_xwf7 1.png" alt="information_image#2">
                     </div>
                 </div>
             </div>
