feat:add scss files

--- a/cosqq.html
+++ b/cosqq.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<link href="./css/index.css" rel="stylesheet" />
+		<link href="./scss/general.css" rel="stylesheet" />
 	</head>
 	<body>
 		<header>
@@ -53,19 +53,22 @@
 			<section id="offer">
 				<h1>Offer</h1>
 				<h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-				<div class="all_products">
-					<div class="product">
-						<div class="offer_tile_image">
-							<img src="./public/icons/Vector.png" alt="box" />
+
+				<div class="row all_products">
+					<div class="col-lg-4 col-xl-4">
+						<div class="product">
+							<div class="offer_tile_image">
+								<img src="./public/icons/Vector.png" alt="box" />
+							</div>
+							<h2>Lorem ipsum</h2>
+							<p>
+								Lorem ipsum dolor sit amet, architecto asperiores, sequi
+								obcaecati, alias sunt ea. Soluta, rerum, perspiciatis.Lorem
+								ipsum dolor sit amet, architecto asperiores, sequi obcaecati,
+								alias sunt ea. Soluta, rerum, perspiciatis.
+							</p>
+							<button>Learn More</button>
 						</div>
-						<h2>Lorem ipsum</h2>
-						<p>
-							Lorem ipsum dolor sit amet, architecto asperiores, sequi
-							obcaecati, alias sunt ea. Soluta, rerum, perspiciatis.Lorem ipsum
-							dolor sit amet, architecto asperiores, sequi obcaecati, alias sunt
-							ea. Soluta, rerum, perspiciatis.
-						</p>
-						<button>Learn More</button>
 					</div>
 
 					<div class="product">
