rosponsive for mobile-phone

--- a/cosqq.html
+++ b/cosqq.html
@@ -38,7 +38,9 @@
 						dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit
 						amet consectetur adipisicing elit.
 					</h2>
-					<input class="subbmit_explore" type="submit" value="Explore" />
+					<div>
+						<input class="subbmit_explore" type="submit" value="Explore" />
+					</div>
 				</div>
 				<div class="start_image">
 					<img
@@ -46,9 +48,8 @@
 						alt="house"
 					/>
 				</div>
+				<div class="triangle-bottomright"></div>
 			</section>
-
-			<div class="triangle-bottomright"></div>
 
 			<section id="offer">
 				<h1>Offer</h1>
@@ -71,28 +72,32 @@
 						</div>
 					</div>
 
-					<div class="product">
-						<div class="offer_tile_image">
-							<img src="./public/icons/Vector.png" alt="box" />
+					<div class="col-sm-12 col-lg-4 col-xl-4">
+						<div class="product">
+							<div class="offer_tile_image">
+								<img src="./public/icons/Vector.png" alt="box" />
+							</div>
+							<h2>Lorem ipsum</h2>
+							<p>
+								Lorem ipsum dolor sit amet, architecto asperiores, sequi
+								obcaecati, alias sunt ea. Soluta, rerum, perspiciatis.
+							</p>
+							<button>Learn More</button>
 						</div>
-						<h2>Lorem ipsum</h2>
-						<p>
-							Lorem ipsum dolor sit amet, architecto asperiores, sequi
-							obcaecati, alias sunt ea. Soluta, rerum, perspiciatis.
-						</p>
-						<button>Learn More</button>
 					</div>
 
-					<div class="product">
-						<div class="offer_tile_image">
-							<img src="./public/icons/Vector.png" alt="box" />
+					<div class="col-lg-4 col-xl-4">
+						<div class="product">
+							<div class="offer_tile_image">
+								<img src="./public/icons/Vector.png" alt="box" />
+							</div>
+							<h2>Lorem ipsum</h2>
+							<p class="description">
+								Lorem ipsum dolor sit amet, architecto asperiores, sequi
+								obcaecati, alias sunt ea. Soluta, rerum, perspiciatis.
+							</p>
+							<button>Learn More</button>
 						</div>
-						<h2>Lorem ipsum</h2>
-						<p class="description">
-							Lorem ipsum dolor sit amet, architecto asperiores, sequi
-							obcaecati, alias sunt ea. Soluta, rerum, perspiciatis.
-						</p>
-						<button>Learn More</button>
 					</div>
 				</div>
 			</section>
@@ -100,6 +105,7 @@
 			<section id="informations">
 				<div class="informations_container">
 					<div class="information_block">
+						<!-- <div class="col-sm-10 col-lg-"></div> -->
 						<div class="information_image">
 							<img
 								src="./public/images/undraw_under_construction_46pa 1.png"
