--- a/cosqq.html
+++ b/cosqq.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="./scss/general.css" rel="stylesheet" />
+    <link href="./scss/index.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -38,7 +38,7 @@
             dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit
             amet consectetur adipisicing elit.
           </h2>
-          <input class="subbmit_explore" type="submit" value="Explore" />
+          <button class="subbmit_explore" type="submit">Explore</button>
         </div>
         <div class="start_image">
           <img
@@ -140,7 +140,7 @@
           <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h2>
 
           <form>
-            <div class="name_email">
+            <div class="data_mini_container">
               <div class="name">
                 <input type="text" placeholder="Imie" />
               </div>
